# SolarHack

./: .clangd  .cproject  .gitignore  .project  README.md  partitions.csv
components/connectivity/: CMakeLists.txt  Kconfig.projbuild
components/connectivity/include/: nvs_managment.h  telegram_bot.h
components/connectivity/src/: telegram_bot.c  web_managment.c  wifi_managment.c
components/logic/: CMakeLists.txt  Kconfig.projbuild
components/logic/include/: protect.h
components/logic/src/: solar_tracker.c
components/sensors/: CMakeLists.txt  Kconfig.projbuild
components/sensors/include/: adc.h
components/servo_control/: CMakeLists.txt  Kconfig.projbuild
components/servo_control/include/: servo_control.h
components/servo_control/src/: servo_control.c
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  battery.c  battery.h  ina.c  ina.h  main.c  mqtt_protocol.c  mqtt_protocol.h  nvs_managment.c  nvs_managment.h  servo_control.c  servo_control.h  solar_tracker.c  solar_tracker.h  telegram_bot.c  web_managment.c  web_managment.h  wifi_managment.c  wifi_managment.h
